--- a/index.html
+++ b/index.html
@@ -59,6 +59,9 @@
                 <img src="bike.gif" alt="">
 
             </div>
+            <div class="wheel">
+                <img src="blue-removebg-preview.png" >
+            </div>
 
         </div>
     </section>
